inicio exercicio concessionaria